# gesher

./: MANIFEST.in  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: autobot.yml  check-title.yml  smart-link.yml
docs/: architecture.md  protocol.md
gesher/: __main__.py  cli.py  client.py  security.py  server.py
scripts/: check.bat  install.bat
tests/: cli_test.py  client_test.py  security_test.py  server_test.py
