[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gesher"
version = "1.0.0"
description = "A secure, pure-Python HTTP tunnel to expose local services to the internet."
readme = "README.md"
license = {text = "UCSL-1.0"}
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    {name = "Yaron Koresh"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
keywords = ["repository", "tunneling", "networking"]
dependencies = [
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "cryptography"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "poethepoet",
    "pre-commit",
    "build"
]

[project.scripts]
gesher = "gesher.cli:main"

[project.urls]
Homepage = "https://github.com/YaronKoresh/gesher"
Repository = "https://github.com/YaronKoresh/gesher"
Issues = "https://github.com/YaronKoresh/gesher/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

# --- RUFF CONFIGURATION ---
[tool.ruff]
target-version = "py38"
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

ignore = [
    "E501",
    "E402",
    "F401"
]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- POE TASKS ---
[tool.poe.tasks]
# Project Development
dev = "uvicorn gesher.server:app --reload"

# Quality Assurance
test = "pytest tests/"
compile = { cmd = "python -m compileall -q ." }
pre-commit = { cmd = "pre-commit run --all-files", env = { SKIP = "no-commit-to-branch" } }
clean = { cmd = '''python -Bc "
import pathlib, shutil;
targets = {
        'directories': {
            '__pycache__', '.pytest_cache', '.ruff_cache', '.mypy_cache',
            '.tox', '.nox', '.cache', '.ipynb_checkpoints', 'htmlcov',
            'build', 'dist', '.eggs', '*.egg-info', '.coverage.reports'
        },
        'files': {
            '.coverage', '.coverage.*', '.sqlite', 'nosetests.xml',
            'coverage.xml', '*.pyc', '*.pyo', '*.pyd', '.DS_Store'
        }
};
for p in pathlib.Path('.').rglob('*'):
        if p.name in targets['directories'] or any(p.match(pat) for pat in targets['directories']):
            if p.is_dir(): shutil.rmtree(p, ignore_errors=True)
        elif p.name in targets['files'] or any(p.match(pat) for pat in targets['files']):
            if p.is_file(): p.unlink(missing_ok=True)
"''' }
strip-comments = { cmd = '''python -c "
import tokenize
import io
import pathlib

def strip_comments_and_format(file_path):
    try:
        with open(file_path, 'r', encoding='utf-8', newline='') as f:
            source = f.read()

        tokens = tokenize.generate_tokens(io.StringIO(source).readline)
        result = []
        last_lineno = -1
        last_col = 0

        for toktype, tokval, start, end, line in tokens:
            if toktype == tokenize.COMMENT:
                continue

            if toktype == tokenize.NL or toktype == tokenize.NEWLINE:
                pass

            result.append((toktype, tokval, start, end, line))
        cleaned = tokenize.untokenize(result)

        with open(file_path, 'w', encoding='utf-8', newline='') as f:
            f.write(cleaned)

        print(f'Stripped and cleaned: {file_path}')

    except Exception as e:
        print(f'Failed to process {file_path}: {e}')

for p in pathlib.Path('.').rglob('*.py'):
    strip_comments_and_format(p)
"''' }
check = ["clean", "compile", "strip-comments", "pre-commit", "test", "clean"]

# Build Pipeline
build = { cmd = "python -m build" }

# Setup Task
hook = { cmd = "pre-commit install" }
